# multithreading_camera

./: CMakeLists.txt  main.cpp
